pre entrega dos - modifico el incluyo los estilos de bootstrap y mi pagina es completamente responsive.

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -58,11 +58,11 @@
                     <img src="../assets/img/JohannPaloma.jpg" alt="Johann's selfie" class="aboutImg">
                     <h2>Johann Palomá</h2>
                     <h3>About Me</h3>
-                    <p>
+                    <p class="whiteText-1">
                         Johann Palomá, a Colombian native, ventured to London, Ontario, to pursue his passion for 3D
                         animation and character design after studying Film and TV in Colombia.
                     </p>
-                    <p>
+                    <p class="whiteText-1">
                         Immersed in the vibrant animation industry of Canada, Johann merges his background in
                         storytelling
                         with new skills, crafting captivating narratives and characters. His journey epitomizes the
@@ -76,15 +76,15 @@
                     <section class="edTraining">
                         <h3>Education and Training</h3>
                         <ul>
-                            <li>
+                            <li class="whiteText-1">
                                 Bachelor of Arts: Film And Television Production
                                 Universidad de Bogotá Jorge Tadeo Lozano (Aug 2019).
                             </li>
-                            <li>
+                            <li class="whiteText-1">
                                 Ontario College Graduate Certificate. 3D Animation And Character Design
                                 Fanshawe College of Applied Arts And Technology (Apr 2022).
                             </li>
-                            <li>
+                            <li class="whiteText-1">
                                 Animation Trainee - Technicolor Creative Studios Academy (Jul 2022).
                             </li>
                         </ul>
@@ -92,47 +92,47 @@
                     <section class="skills">
                         <h3>Skills</h3>
                         <ul>
-                            <li>3D animating</li>
-                            <li>3D modeling</li>
-                            <li>3D texturing</li>
-                            <li>Video Editing</li>
-                            <li>Sound Mixing</li>
-                            <li>Script Writing</li>
+                            <li class="whiteText-1">3D animating</li>
+                            <li class="whiteText-1">3D modeling</li>
+                            <li class="whiteText-1">3D texturing</li>
+                            <li class="whiteText-1">Video Editing</li>
+                            <li class="whiteText-1">Sound Mixing</li>
+                            <li class="whiteText-1">Script Writing</li>
                         </ul>
                     </section>
                     <section class="software">
                         <h3>Software</h3>
                         <ul>
-                            <li>Autodesk Maya</li>
-                            <li>Unreal Engine</li>
-                            <li>Substance Painter</li>
-                            <li>zBrush</li>
-                            <li>Adobe Audition</li>
-                            <li>Adobe Premiere Pro</li>
-                            <li>Adobe After Effects</li>
+                            <li class="whiteText-1">Autodesk Maya</li>
+                            <li class="whiteText-1">Unreal Engine</li>
+                            <li class="whiteText-1">Substance Painter</li>
+                            <li class="whiteText-1">zBrush</li>
+                            <li class="whiteText-1">Adobe Audition</li>
+                            <li class="whiteText-1">Adobe Premiere Pro</li>
+                            <li class="whiteText-1">Adobe After Effects</li>
                         </ul>
                     </section>
                     <section class="experience">
                         <h3>Experience</h3>
                         <ul>
-                            <li>Freelance 3D Animator<br>Bogotá, Colombia <br>Independent/May 2015 to Aug 2021</li>
-                            <li>Junior 3D Animator <br>Toronto, Canada <br>Snowball Studios Ltd./Oct 2022 to Jul 2023
+                            <li class="whiteText-1">Freelance 3D Animator<br>Bogotá, Colombia <br>Independent/May 2015 to Aug 2021</li>
+                            <li class="whiteText-1">Junior 3D Animator <br>Toronto, Canada <br>Snowball Studios Ltd./Oct 2022 to Jul 2023
                             </li>
                         </ul>
                     </section>
                     <section class="coExp">
                         <h3>Collaborative Experience</h3>
                         <ul>
-                            <li>Felices Fiestas (3D animated Shortfilm)</li>
-                            <li>Libertad y Desorden (Shortfilm)</li>
-                            <li>G.E.A (Shortfilm)</li>
+                            <li class="whiteText-1">Felices Fiestas (3D animated Shortfilm)</li>
+                            <li class="whiteText-1">Libertad y Desorden (Shortfilm)</li>
+                            <li class="whiteText-1">G.E.A (Shortfilm)</li>
                         </ul>
                     </section>
                     <section class="lang">
                         <h3>Languages</h3>
                         <ul>
-                            <li>Spanish</li>
-                            <li>English</li>
+                            <li class="whiteText-1">Spanish</li>
+                            <li class="whiteText-1">English</li>
                         </ul>
                     </section>
                 </div>
