--- a/pages/animviewpoint.html
+++ b/pages/animviewpoint.html
@@ -155,7 +155,7 @@
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93463.03985580953!2d-81.31777336531059!3d42.941903605916494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef20ea88d9b0b%3A0x28c7d7699a056b95!2sLondon%2C%20Ontario!5e0!3m2!1ses!2sca!4v1706937881784!5m2!1ses!2sca"
                             width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <h6>London, ON.</h6>
+                        <h6 class="whiteText-1">London, ON.</h6>
                     </section>
                 </div>
             </div>
