Organizo mejor las etiquetas del CSS propio y elimino etiquetas antiguas sin utilizar de los html

--- a/pages/animviewpoint.html
+++ b/pages/animviewpoint.html
@@ -51,7 +51,7 @@
     <main>
         <img src="../assets/img/Background_ 5.png" alt="Inglorious Basterds animation" class="side-image left-image">
         <img src="../assets/img/Background_ 6.png" alt="Penalti kick animation" class="side-image right-image">
-        <section>
+        <section class="whiteText">
             <h1>The AnimViewpoint</h1>
             <h3 class="w-75 mx-auto text-center">Dive into a collection of handpicked news and articles designed to
                 captivate
@@ -66,7 +66,7 @@
                         <a href="https://www.j-14.com/posts/moana-2-sets-sail-for-2024-release-date-cast-plot-music/"
                             target="_blank">
                             <img src="../assets/img/Moana.webp" class="card-img-top" alt="Image 1">
-                            <div class="card-body text-center">
+                            <div class="blackText card-body text-center">
                                 <h4 class="card-title">Moana 2</h4>
                                 <h5 class="card-text">Sets Sail at Disney With First Image & Teaser Footage.</h5>
                             </div>
@@ -77,7 +77,7 @@
                     <div class="card mb-3 pb-0">
                         <a href="https://collider.com/despicable-me-4-everything-we-know-so-far/" target="_blank">
                             <img src="../assets/img/Despicable me.jpg" class="card-img-top" alt="Image 1">
-                            <div class="card-body text-center">
+                            <div class="blackText card-body text-center">
                                 <h4 class="card-title">Despicable Me 4</h4>
                                 <h5 class="card-text">Check out the trailer.</h5>
                             </div>
@@ -89,7 +89,7 @@
                         <a href="https://www.ign.com/videos/megamind-vs-the-doom-syndicate-official-trailer"
                             target="_blank">
                             <img src="../assets/img/Megamind.jpg" class="card-img-top" alt="Image 1">
-                            <div class="card-body text-center">
+                            <div class="blackText card-body text-center">
                                 <h4 class="card-title">Megamind Vs The Doom Syndicate</h4>
                                 <h5 class="card-text">Release, Trailer and Everything We Know So Far.</h5>
                             </div>
@@ -102,7 +102,7 @@
                             target="_blank">
                             <img src="../assets/img/Alibaba Pictures - Studio Ghibli.jpg" class="card-img-top"
                                 alt="Image 1">
-                            <div class="card-body text-center">
+                            <div class="blackText card-body text-center">
                                 <h4 class="card-title">Alibaba Pictures & Studio Ghibli</h4>
                                 <h5 class="card-text">Strategic Partnership.</h5>
                             </div>
@@ -114,7 +114,7 @@
     </main>
     <footer class="mt-6">
         <div class="container">
-            <div class="row">
+            <div class="whiteText row">
                 <div class="col-md-4">
                     <section>
                         <h3>Social Media</h3>
@@ -155,7 +155,7 @@
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93463.03985580953!2d-81.31777336531059!3d42.941903605916494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef20ea88d9b0b%3A0x28c7d7699a056b95!2sLondon%2C%20Ontario!5e0!3m2!1ses!2sca!4v1706937881784!5m2!1ses!2sca"
                             width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <h6 class="whiteText-1">London, ON.</h6>
+                        <h6>London, ON.</h6>
                     </section>
                 </div>
             </div>
@@ -163,5 +163,4 @@
     </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
