--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,14 +47,13 @@
                 </div>
             </div>
         </nav>
-
     </header>
     <main>
         <img src="../assets/img/Background_ 7.png" alt="Inglorious Basterds animation" class="side-image left-image">
         <img src="../assets/img/Background_ 8.png" alt="Penalti kick animation" class="side-image right-image">
-        <h1 class="pageTitle">Let's discuss your next project</h1>
+        <h1 class="whiteText">Let's discuss your next project</h1>
         <div class="container center-form">
-            <form action="" method="" class="col-lg-6">
+            <form action="" method="" class="whiteText col-lg-6">
                 <div class="row mb-3">
                     <div class="col">
                         <label for="name" class="form-label desText">Name</label>
@@ -83,18 +82,19 @@
                 </div>
                 <div class="mb-3">
                     <label for="message" class="form-label desText">Message</label>
-                    <textarea class="form-control" id="message" name="message" rows="3" placeholder="How can I help"></textarea>
+                    <textarea class="form-control" id="message" name="message" rows="3"
+                        placeholder="How can I help"></textarea>
                 </div>
                 <buttom class="mb-3">
                     <button type="reset" class="btn btn-secondary" value="">Reset</button>
                     <button type="submit" class="btn btn-primary" value="">Submit</button>
-                </div>
-            </form>
+        </div>
+        </form>
         </div>
     </main>
     <footer class="mt-6">
         <div class="container">
-            <div class="row">
+            <div class="whiteText row">
                 <div class="col-md-4">
                     <section>
                         <h3>Social Media</h3>
