--- a/pages/resume.html
+++ b/pages/resume.html
@@ -49,20 +49,20 @@
         </nav>
     </header>
     <main class="container">
-        <h1 class="pageTitle">Resume</h1>
+        <h1 class="whiteText">Resume</h1>
         <img src="../assets/img/Background_ 3.png" alt="Inglorious Basterds animation" class="side-image left-image">
         <img src="../assets/img/Background_ 4.png" alt="Penalti kick animation" class="side-image right-image">
         <section class="resume w-75 mx-auto">
             <div class="row">
                 <div class="col-lg-6">
                     <img src="../assets/img/JohannPaloma.jpg" alt="Johann's selfie" class="aboutImg">
-                    <h2>Johann Palomá</h2>
-                    <h3>About Me</h3>
-                    <p class="whiteText-1">
+                    <h2 class="whiteText fWeight-1">Johann Palomá</h2>
+                    <h3 class="whiteText">About Me</h3>
+                    <p class="whiteText">
                         Johann Palomá, a Colombian native, ventured to London, Ontario, to pursue his passion for 3D
                         animation and character design after studying Film and TV in Colombia.
                     </p>
-                    <p class="whiteText-1">
+                    <p class="whiteText">
                         Immersed in the vibrant animation industry of Canada, Johann merges his background in
                         storytelling
                         with new skills, crafting captivating narratives and characters. His journey epitomizes the
@@ -73,66 +73,66 @@
                     </p>
                 </div>
                 <div class="col-lg-6">
-                    <section class="edTraining">
+                    <section class="whiteText">
                         <h3>Education and Training</h3>
                         <ul>
-                            <li class="whiteText-1">
+                            <li>
                                 Bachelor of Arts: Film And Television Production
                                 Universidad de Bogotá Jorge Tadeo Lozano (Aug 2019).
                             </li>
-                            <li class="whiteText-1">
+                            <li>
                                 Ontario College Graduate Certificate. 3D Animation And Character Design
                                 Fanshawe College of Applied Arts And Technology (Apr 2022).
                             </li>
-                            <li class="whiteText-1">
+                            <li>
                                 Animation Trainee - Technicolor Creative Studios Academy (Jul 2022).
                             </li>
                         </ul>
                     </section>
-                    <section class="skills">
+                    <section class="whiteText">
                         <h3>Skills</h3>
                         <ul>
-                            <li class="whiteText-1">3D animating</li>
-                            <li class="whiteText-1">3D modeling</li>
-                            <li class="whiteText-1">3D texturing</li>
-                            <li class="whiteText-1">Video Editing</li>
-                            <li class="whiteText-1">Sound Mixing</li>
-                            <li class="whiteText-1">Script Writing</li>
+                            <li>3D animating</li>
+                            <li>3D modeling</li>
+                            <li>3D texturing</li>
+                            <li>Video Editing</li>
+                            <li>Sound Mixing</li>
+                            <li>Script Writing</li>
                         </ul>
                     </section>
-                    <section class="software">
+                    <section class="whiteText">
                         <h3>Software</h3>
                         <ul>
-                            <li class="whiteText-1">Autodesk Maya</li>
-                            <li class="whiteText-1">Unreal Engine</li>
-                            <li class="whiteText-1">Substance Painter</li>
-                            <li class="whiteText-1">zBrush</li>
-                            <li class="whiteText-1">Adobe Audition</li>
-                            <li class="whiteText-1">Adobe Premiere Pro</li>
-                            <li class="whiteText-1">Adobe After Effects</li>
+                            <li>Autodesk Maya</li>
+                            <li>Unreal Engine</li>
+                            <li>Substance Painter</li>
+                            <li>zBrush</li>
+                            <li>Adobe Audition</li>
+                            <li>Adobe Premiere Pro</li>
+                            <li>Adobe After Effects</li>
                         </ul>
                     </section>
-                    <section class="experience">
+                    <section class="whiteText">
                         <h3>Experience</h3>
                         <ul>
-                            <li class="whiteText-1">Freelance 3D Animator<br>Bogotá, Colombia <br>Independent/May 2015 to Aug 2021</li>
-                            <li class="whiteText-1">Junior 3D Animator <br>Toronto, Canada <br>Snowball Studios Ltd./Oct 2022 to Jul 2023
+                            <li>Freelance 3D Animator<br>Bogotá, Colombia <br>Independent/May 2015 to Aug 2021</li>
+                            <li>Junior 3D Animator <br>Toronto, Canada <br>Snowball Studios Ltd./Oct 2022 to Jul 2023
                             </li>
                         </ul>
                     </section>
-                    <section class="coExp">
+                    <section class="whiteText">
                         <h3>Collaborative Experience</h3>
                         <ul>
-                            <li class="whiteText-1">Felices Fiestas (3D animated Shortfilm)</li>
-                            <li class="whiteText-1">Libertad y Desorden (Shortfilm)</li>
-                            <li class="whiteText-1">G.E.A (Shortfilm)</li>
+                            <li>Felices Fiestas (3D animated Shortfilm)</li>
+                            <li>Libertad y Desorden (Shortfilm)</li>
+                            <li>G.E.A (Shortfilm)</li>
                         </ul>
                     </section>
-                    <section class="lang">
+                    <section class="whiteText">
                         <h3>Languages</h3>
                         <ul>
-                            <li class="whiteText-1">Spanish</li>
-                            <li class="whiteText-1">English</li>
+                            <li>Spanish</li>
+                            <li>English</li>
                         </ul>
                     </section>
                 </div>
@@ -141,7 +141,7 @@
     </main>
     <footer class="mt-6">
         <div class="container">
-            <div class="row">
+            <div class="row whiteText">
                 <div class="col-md-4">
                     <section>
                         <h3>Social Media</h3>
