--- a/pages/work.html
+++ b/pages/work.html
@@ -51,10 +51,10 @@
     <main>
         <img src="../assets/img/Background_ 2.png" alt="Inglorious Basterds animation" class="side-image left-image">
         <img src="../assets/img/Background_ 7.png" alt="Penalti kick animation" class="side-image right-image">
-        <h1 class="pageTitle">Previous Projects</h1>
+        <h1 class="whiteText">Previous Projects</h1>
 
-        <section>
-            <h2 class="w-75 mx-auto text-center">Felices Fiestas</h2>
+        <section class="whiteText">
+            <h2 class="fWeight-1 w-75 mx-auto text-center">Felices Fiestas</h2>
             <h3 class="w-75 mx-auto text-center">This was my first approach to Autodesk Maya. As my thesis I decided to
                 write a
                 shortfilm which only could be done through animation. There were almost ten versions of the screenplay
@@ -69,8 +69,8 @@
                 </div>
             </div>
     </section>
-        <section>
-            <h2 class="w-75 mx-auto mt-5 text-center">Libertad y Desorden</h2>
+        <section class="whiteText">
+            <h2 class="fWeight-1 w-75 mx-auto mt-5 text-center">Libertad y Desorden</h2>
             <h3 class="w-75 mx-auto text-center">Libertad y desorden is a short film written and directed by Christian
                 Carvalho. He
                 came to me with the idea of a city surrounded by technology, thieves, and political abuses. We wanted to
@@ -91,7 +91,7 @@
     </main>
     <footer class="mt-6">
         <div class="container">
-            <div class="row">
+            <div class="row whiteText">
                 <div class="col-md-4">
                     <section>
                         <h3>Social Media</h3>
