--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <img src="./assets/img/Background_ 1.png" alt="Inglorious Basterds animation" class="side-image left-image">
         <img src="./assets/img/Background_ 2.png" alt="Penalti kick animation" class="side-image right-image">
         <section>
-            <h1>3D Animation Reel</h1> 
-            <h3 class="w-75 mx-auto text-center"">Welcome to the heart of my creative world! Step into the captivating realm of 3D
+            <h1 class="whiteText">3D Animation Reel</h1>
+            <h3 class="whiteText w-75 mx-auto text-center"">Welcome to the heart of my creative world! Step into the captivating realm of 3D
                 animation as I proudly present my latest demo reel. <br>So, whether you're a fellow enthusiast, a
                 potential collaborator, or simply someone who appreciates the magic of animation, I invite you to
                 immerse yourself in my world. Click play, sit back, and let the journey begin.
@@ -70,7 +70,7 @@
     </main>
     <footer class="mt-6">
         <div class="container">
-            <div class="row">
+            <div class="row whiteText">
                 <div class="col-md-4">
                     <section>
                         <h3>Social Media</h3>
@@ -111,7 +111,7 @@
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93463.03985580953!2d-81.31777336531059!3d42.941903605916494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef20ea88d9b0b%3A0x28c7d7699a056b95!2sLondon%2C%20Ontario!5e0!3m2!1ses!2sca!4v1706937881784!5m2!1ses!2sca"
                             width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <h6 class="whiteText-1">London, ON.</h6>
+                        <h6 class="whiteText whiteText-1">London, ON.</h6>
                     </section>
                 </div>
             </div>
