trabajo en progreso - faltan animaciones

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -53,7 +53,7 @@
         <img src="../assets/img/Background_ 8.png" alt="Penalti kick animation" class="side-image right-image">
         <h1 class="whiteText">Let's discuss your next project</h1>
         <div class="container center-form">
-            <form action="" method="" class="whiteText col-lg-6">
+            <form action="" method="post" class="whiteText col-lg-6">
                 <div class="row mb-3">
                     <div class="col">
                         <label for="name" class="form-label desText">Name</label>
@@ -82,12 +82,12 @@
                 </div>
                 <div class="mb-3">
                     <label for="message" class="form-label desText">Message</label>
-                    <textarea class="form-control" id="message" name="message" rows="3"
-                        placeholder="How can I help"></textarea>
+                    <textarea class="form-control" id="message" name="message" rows="10"
+                        placeholder="Tell me what needs to be animated!"></textarea>
                 </div>
                 <buttom class="mb-3">
-                    <button type="reset" class="btn btn-secondary" value="">Reset</button>
-                    <button type="submit" class="btn btn-primary" value="">Submit</button>
+                    <button type="reset" class="btn resButton" value="">Reset</button>
+                    <button type="submit" class="btn subButton" value="">Submit</button>
         </div>
         </form>
         </div>
