--- a/pages/resume.html
+++ b/pages/resume.html
@@ -49,7 +49,7 @@
         </nav>
     </header>
     <main class="container">
-        <h1 class="whiteText">Resume</h1>
+        <h1>Resume</h1>
         <img src="../assets/img/Background_ 3.png" alt="Inglorious Basterds animation" class="side-image left-image">
         <img src="../assets/img/Background_ 4.png" alt="Penalti kick animation" class="side-image right-image">
         <section class="resume w-75 mx-auto">
@@ -57,12 +57,12 @@
                 <div class="col-lg-6">
                     <img src="../assets/img/JohannPaloma.jpg" alt="Johann's selfie" class="aboutImg">
                     <h2 class="whiteText fWeight-1">Johann Palomá</h2>
-                    <h3 class="whiteText">About Me</h3>
-                    <p class="whiteText">
+                    <h3>About Me</h3>
+                    <p>
                         Johann Palomá, a Colombian native, ventured to London, Ontario, to pursue his passion for 3D
                         animation and character design after studying Film and TV in Colombia.
                     </p>
-                    <p class="whiteText">
+                    <p>
                         Immersed in the vibrant animation industry of Canada, Johann merges his background in
                         storytelling
                         with new skills, crafting captivating narratives and characters. His journey epitomizes the
