--- a/pages/animviewpoint.html
+++ b/pages/animviewpoint.html
@@ -119,10 +119,10 @@
                     <section>
                         <h3>Social Media</h3>
                         <a href="https://www.instagram.com/jo_hux/" target="_blank">
-                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-instagram footerHover"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/johann-paloma-b5223b174/" target="_blank">
-                            <i class="fab fa-linkedin"></i>
+                            <i class="fab fa-linkedin footerHover"></i>
                         </a>
                     </section>
                 </div>
@@ -131,19 +131,19 @@
                         <h3>Navigation</h3>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="../index.html">Demo Reel</a>
+                                <a class="nav-link footerHover" href="../index.html">Demo Reel</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./resume.html">Resume</a>
+                                <a class="nav-link footerHover" href="./resume.html">Resume</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./work.html">Work</a>
+                                <a class="nav-link footerHover" href="./work.html">Work</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./animviewpoint.html">The AnimViewpoint</a>
+                                <a class="nav-link footerHover" href="./animviewpoint.html">The AnimViewpoint</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./contact.html">Contact</a>
+                                <a class="nav-link footerHover" href="./contact.html">Contact</a>
                             </li>
                         </ul>
                     </section>
@@ -163,4 +163,5 @@
     </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
