--- a/pages/work.html
+++ b/pages/work.html
@@ -91,15 +91,15 @@
     </main>
     <footer class="mt-6">
         <div class="container">
-            <div class="row whiteText">
+            <div class="whiteText row">
                 <div class="col-md-4">
                     <section>
                         <h3>Social Media</h3>
                         <a href="https://www.instagram.com/jo_hux/" target="_blank">
-                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-instagram footerHover"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/johann-paloma-b5223b174/" target="_blank">
-                            <i class="fab fa-linkedin"></i>
+                            <i class="fab fa-linkedin footerHover"></i>
                         </a>
                     </section>
                 </div>
@@ -108,19 +108,19 @@
                         <h3>Navigation</h3>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="../index.html">Demo Reel</a>
+                                <a class="nav-link footerHover" href="../index.html">Demo Reel</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./resume.html">Resume</a>
+                                <a class="nav-link footerHover" href="./resume.html">Resume</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./work.html">Work</a>
+                                <a class="nav-link footerHover" href="./work.html">Work</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./animviewpoint.html">The AnimViewpoint</a>
+                                <a class="nav-link footerHover" href="./animviewpoint.html">The AnimViewpoint</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./contact.html">Contact</a>
+                                <a class="nav-link footerHover" href="./contact.html">Contact</a>
                             </li>
                         </ul>
                     </section>
@@ -132,7 +132,7 @@
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93463.03985580953!2d-81.31777336531059!3d42.941903605916494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef20ea88d9b0b%3A0x28c7d7699a056b95!2sLondon%2C%20Ontario!5e0!3m2!1ses!2sca!4v1706937881784!5m2!1ses!2sca"
                             width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <h6 class="whiteText-1">London, ON.</h6>
+                        <h6>London, ON.</h6>
                     </section>
                 </div>
             </div>
