"Optimizo todas las imagenes del proyecto y agrego descripciones."

--- a/pages/animviewpoint.html
+++ b/pages/animviewpoint.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Iconos-->>
     <script src="https://kit.fontawesome.com/e85111b16a.js" crossorigin="anonymous"></script>
-    <title>The AnimViewpoint</title>
+    <title>The AnimViewpoint - Johann Paloma</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <!--SEO-->
+    <meta name="description" content="Johann Paloma News Curations">
+    <meta name="keywords" content="3D Animation, News, Movie, VFX">
     <!--bootstrap-->
     <link href="../css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -20,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/Logo.png" alt="Logo">
+                    <img src="../assets/img/logo.webp" alt="Johann Paloma logo: Represents the initials 'J' and 'P', forming a unique and distinctive composition.">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,8 +52,8 @@
         </nav>
     </header>
     <main>
-        <img src="../assets/img/Background_ 5.png" alt="Inglorious Basterds animation" class="side-image left-image">
-        <img src="../assets/img/Background_ 6.png" alt="Penalti kick animation" class="side-image right-image">
+        <img src="../assets/img/background-5.webp" alt="Inspired by Quentin Tarantino's 'Inglourious Basterds,' this is a frame from Johann's animated remake of the bar scene." class="side-image left-image">
+        <img src="../assets/img/background-6.webp" alt="This is a frame from Johann's animation depicting a soccer player and a goalkeeper during a penalty kick." class="side-image right-image">
         <section class="whiteText">
             <h1>The AnimViewpoint</h1>
             <h3 class="w-75 mx-auto text-center">Dive into a collection of handpicked news and articles designed to
@@ -65,7 +68,7 @@
                     <div class="card mb-3 pb-0">
                         <a href="https://www.j-14.com/posts/moana-2-sets-sail-for-2024-release-date-cast-plot-music/"
                             target="_blank">
-                            <img src="../assets/img/Moana.webp" class="card-img-top" alt="Image 1">
+                            <img src="../assets/img/Moana.webp" class="card-img-top" alt="Moana and Maui: Characters from the Disney movie 'Moana,' posing heroically.">
                             <div class="blackText card-body text-center">
                                 <h4 class="card-title">Moana 2</h4>
                                 <h5 class="card-text">Sets Sail at Disney With First Image & Teaser Footage.</h5>
@@ -76,7 +79,7 @@
                 <div class="col-md-6">
                     <div class="card mb-3 pb-0">
                         <a href="https://collider.com/despicable-me-4-everything-we-know-so-far/" target="_blank">
-                            <img src="../assets/img/Despicable me.jpg" class="card-img-top" alt="Image 1">
+                            <img src="../assets/img/despicable-me.webp" class="card-img-top" alt="Minions; characters from the movie 'Despicable Me' in a post-apocalyptic setting.">
                             <div class="blackText card-body text-center">
                                 <h4 class="card-title">Despicable Me 4</h4>
                                 <h5 class="card-text">Check out the trailer.</h5>
@@ -88,7 +91,7 @@
                     <div class="card mb-3 pb-0">
                         <a href="https://www.ign.com/videos/megamind-vs-the-doom-syndicate-official-trailer"
                             target="_blank">
-                            <img src="../assets/img/Megamind.jpg" class="card-img-top" alt="Image 1">
+                            <img src="../assets/img/megamind.webp" class="card-img-top" alt="Smiling Megamind aiming a large weapon towards the camera.">
                             <div class="blackText card-body text-center">
                                 <h4 class="card-title">Megamind Vs The Doom Syndicate</h4>
                                 <h5 class="card-text">Release, Trailer and Everything We Know So Far.</h5>
@@ -100,8 +103,8 @@
                     <div class="card mb-3 pb-0">
                         <a href="https://www.awn.com/news/alibaba-pictures-studio-ghibli-forge-strategic-partnership"
                             target="_blank">
-                            <img src="../assets/img/Alibaba Pictures - Studio Ghibli.jpg" class="card-img-top"
-                                alt="Image 1">
+                            <img src="../assets/img/alibaba-pictures-studio-ghibli.webp" class="card-img-top"
+                                alt="Toshio Suzuki, Director and Producer of Studio Ghibli, and Mr. Jie Li, President of Alibaba Pictures.">
                             <div class="blackText card-body text-center">
                                 <h4 class="card-title">Alibaba Pictures & Studio Ghibli</h4>
                                 <h5 class="card-text">Strategic Partnership.</h5>
