--- a/pages/resume.html
+++ b/pages/resume.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Iconos-->>
     <script src="https://kit.fontawesome.com/e85111b16a.js" crossorigin="anonymous"></script>
-    <title>Resume</title>
+    <title>Resume - Johann Paloma</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <!--SEO-->
+    <meta name="description" content="Johann Paloma academic, training, and previous information">
+    <meta name="keywords" content="3D Animator, Contact, Information, Hiring, Training, Skills">
     <!--bootstrap-->
     <link href="../css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -20,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/Logo.png" alt="Logo">
+                    <img src="../assets/img/logo.webp" alt="Johann Paloma logo: Represents the initials 'J' and 'P', forming a unique and distinctive composition.">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,12 +53,12 @@
     </header>
     <main class="container">
         <h1>Resume</h1>
-        <img src="../assets/img/Background_ 3.png" alt="Inglorious Basterds animation" class="side-image left-image">
-        <img src="../assets/img/Background_ 4.png" alt="Penalti kick animation" class="side-image right-image">
+        <img src="../assets/img/background-3.webp" alt="Frame from Johann's animation demonstrating body mechanics, showing a smiling character dancing." class="side-image left-image">
+        <img src="../assets/img/background-4.webp" alt="Inspired by Quentin Tarantino's 'Inglourious Basterds,' this is a frame from Johann's animated remake of the bar scene." class="side-image right-image">
         <section class="resume w-75 mx-auto">
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="../assets/img/JohannPaloma.jpg" alt="Johann's selfie" class="aboutImg">
+                    <img src="../assets/img/johannpaloma.webp" alt="Johann's selfie" class="aboutImg">
                     <h2 class="whiteText fWeight-1">Johann Palomá</h2>
                     <h3>About Me</h3>
                     <p>
