--- a/pages/work.html
+++ b/pages/work.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Iconos-->>
     <script src="https://kit.fontawesome.com/e85111b16a.js" crossorigin="anonymous"></script>
-    <title>Work</title>
+    <title>Work - Johann Paloma</title>
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <!--SEO-->
+    <meta name="description" content="Johann Paloma previous projects">
+    <meta name="keywords" content="3D Animation, Animator, Shortfilm, VFX">
     <!--bootstrap-->
     <link href="../css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -20,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/Logo.png" alt="Logo">
+                    <img src="../assets/img/logo.webp" alt="Johann Paloma logo: Represents the initials 'J' and 'P', forming a unique and distinctive composition.">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,8 +52,8 @@
         </nav>
     </header>
     <main>
-        <img src="../assets/img/Background_ 2.png" alt="Inglorious Basterds animation" class="side-image left-image">
-        <img src="../assets/img/Background_ 7.png" alt="Penalti kick animation" class="side-image right-image">
+        <img src="../assets/img/background-2.webp" alt="Frame from the short film 'Liberty and Disorder,' showing a surveillance drone modeled and animated by Johann." class="side-image left-image">
+        <img src="../assets/img/background-7.webp" alt="Frame from Johann's animated short film 'Felices Fiestas' featuring a smiling Christmas ornament." class="side-image right-image">
         <h1 class="whiteText">Previous Projects</h1>
 
         <section class="whiteText">
